[gd_scene load_steps=8 format=3 uid="uid://cp7gb134h28tw"]

[ext_resource type="Script" path="res://scenes/map_editor/story/stories/listing.gd" id="1_hmhdt"]
[ext_resource type="PackedScene" uid="uid://dl4ndc5spq6qb" path="res://scenes/map_editor/story/stories/story_list_element.tscn" id="2_3qufa"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="12_xr5dt"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="13_poyp1"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="14_aq23x"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="15_n3bnx"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="16_6xoux"]

[node name="Listing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hmhdt")

[node name="elements" type="VFlowContainer" parent="."]
layout_mode = 0
offset_right = 540.0
offset_bottom = 500.0

[node name="StoriesListElement0" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement1" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement2" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement3" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement4" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement5" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement6" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement7" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement8" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement9" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement10" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement11" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement12" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement13" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement14" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement15" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement16" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement17" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement18" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="StoriesListElement19" parent="elements" instance=ExtResource("2_3qufa")]
layout_mode = 2

[node name="list_prev" type="TextureButton" parent="."]
layout_mode = 0
offset_top = 510.0
offset_right = 190.0
offset_bottom = 550.0
focus_neighbor_right = NodePath("../list_next")
texture_normal = ExtResource("12_xr5dt")
texture_pressed = ExtResource("13_poyp1")
texture_hover = ExtResource("14_aq23x")
texture_focused = ExtResource("14_aq23x")

[node name="label" type="Label" parent="list_prev"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("15_n3bnx")
text = "TR_PREV"
horizontal_alignment = 1
vertical_alignment = 1

[node name="list_next" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 510.0
offset_right = 540.0
offset_bottom = 550.0
focus_neighbor_left = NodePath("../list_prev")
texture_normal = ExtResource("12_xr5dt")
texture_pressed = ExtResource("13_poyp1")
texture_hover = ExtResource("14_aq23x")
texture_focused = ExtResource("14_aq23x")

[node name="label" type="Label" parent="list_next"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("15_n3bnx")
text = "TR_NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="new_story" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 600.0
offset_top = 510.0
offset_right = 1000.0
offset_bottom = 610.0

[node name="name" type="LineEdit" parent="new_story"]
layout_mode = 0
offset_right = 350.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("16_6xoux")
alignment = 1
max_length = 30

[node name="add_button" type="TextureButton" parent="new_story"]
layout_mode = 0
offset_left = 360.0
offset_right = 550.0
offset_bottom = 40.0
texture_normal = ExtResource("12_xr5dt")
texture_pressed = ExtResource("13_poyp1")
texture_hover = ExtResource("14_aq23x")
texture_focused = ExtResource("14_aq23x")

[node name="label" type="Label" parent="new_story/add_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("15_n3bnx")
text = "TR_ADD"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="list_prev" to="." method="_on_list_prev_pressed"]
[connection signal="pressed" from="list_next" to="." method="_on_list_next_pressed"]
[connection signal="pressed" from="new_story/add_button" to="." method="_on_add_button_pressed"]
